# jsonany

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap.sh  jsonany_test.cpp  main.cpp  test.sh  vcpkg.json
json/: any.cpp  any.h
test/: jsonany_test.cpp  test_structs.h
